RESOLVED FIXED11230
REGRESSION: eBay ID check never completes
https://bugs.webkit.org/show_bug.cgi?id=11230
Summary REGRESSION: eBay ID check never completes
tim bates
Reported 2006-10-09 10:20:28 PDT
1. go to URL (registration of a new ebay user name) 2. navigate to "Create an eBay User ID" enter something, e.g. "longine" 3. press "Check availability" EXPECTED: Should say checking then dispaly its response (i.e., "taken" or "too vulgar" etc.) OBTAINED: Shows "checking" message, but never returns.
Attachments
Matt Lilek
Comment 1 2006-10-09 22:38:53 PDT
This is a regression. If you try this in Safari 2.0.4 the availability check works correctly the first time but doing it a second time fails (returns an error stating to try again).
Alexey Proskuryakov
Comment 2 2006-10-15 03:38:31 PDT
Regression -> P1.
Matt Lilek
Comment 3 2006-10-27 17:44:24 PDT
Stephanie Lewis
Comment 4 2006-11-08 14:44:20 PST
radar 4808039
Alice Liu
Comment 5 2007-01-25 01:02:56 PST
Note You need to log in before you can comment on or make changes to this bug.