LayoutTests:

Reviewed by Maciej.

        added test for
        <rdar://problem/4808039> REGRESSION: eBay ID check never completes
        also known as
        http://bugs.webkit.org/show_bug.cgi?id=11230

        * http/tests/misc/location-replace-crossdomain-expected.txt: Added.
        * http/tests/misc/location-replace-crossdomain.html: Added.
        * http/tests/misc/resources/failure.html: Added.
        * http/tests/misc/resources/success.html: Added.

WebCore:

        Reviewed by Maciej.

        fixed <rdar://problem/4808039> REGRESSION: eBay ID check never completes
        Also known as http://bugs.webkit.org/show_bug.cgi?id=11230

        * bindings/js/kjs_window.cpp:
        It's not necessary to check safeScript when doing a location.replace, .reload, or .assign
        (KJS::Location::getOwnPropertySlot):
        (KJS::LocationFunc::callAsFunction):



Canonical link: https://commits.webkit.org/16075@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19110 268f45cc-cd09-0410-ab3c-d52691b4dbfc